<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" >
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao" />
    <EditText
        android:id="@+id/descricaoText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tipo_categoria" />
    <Spinner
        android:id="@+id/tipoCategoriaSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        style="?android:attr/buttonBarStyle"
        android:orientation="horizontal">
        
        <Button
            android:id="@+id/salvar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="categoriaOnClick"
            android:text="@string/salvar" />
        
        <Button
            android:id="@+id/cancelar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="categoriaOnClick"
            android:text="@string/cancelar" />
        
    </LinearLayout>
    
</LinearLayout>

